# ECIN416-2021.02

./: README.md
Listados/: Identidades_DetectadasCV_32SC131.txt
Sesiones/: README.md
code/testOpenCV/: BinarySearchTree.cpp  CMakeLists.txt  main.cpp
code/testOpenCV copy/: BinarySearchTree.cpp  CMakeLists.txt  LinkedList.cpp  main.cpp
docs/: BITACORA.md  README.md
docs/images/: README.md
src/: BinarySearchTree.cpp  LinkedList.cpp  README.md  main.cpp
src/release 0.1/testing1-opencv/: testing1-opencv.cpp  testing1-opencv.vcxproj  testing1-opencv.vcxproj.filters
src/release 0.1/testing1-opencv/x64/Debug/: testing1-opencv.exe.recipe  testing1-opencv.ilk  testing1-opencv.obj.enc  vc142.idb
src/release 0.1/testing1-opencv/x64/Debug/testing1-opencv.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testing1-opencv.lastbuildstate
src/release 0.2/Face Detection and Tracking/: CMakeLists.txt  main.cpp
